Affiliation change, bio update

--- a/test.html
+++ b/test.html
@@ -2,7 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L49EKS4DGH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-L49EKS4DGH');
+</script>
 <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="small-device.css" />
 <link rel="stylesheet" type="text/css" href="default.css" />
 
@@ -10,8 +18,8 @@
              
 <meta charset="utf-8"/>
 <title>Michael Schultz</title>
-<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Northwestern, SONIC, Berkeley/>
-<meta name="description" content="Michael Schultz is a Post-Doctoral Researcher in SONIC Research Lab at Northwestern University."/>
+<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Computational, Indiana, Northwestern, SONIC, Berkeley/>
+<meta name="description" content="Michael Schultz is a Assistant Professor at Indiana University."/>
 
 <meta property="og:title" content="Michael Schultz"/>
 <meta property="og:type" content="website"/>
@@ -27,8 +35,9 @@
         <div id='header'>
             <div class='headline'>
                 <span class='name'>Michael Schultz</span>
-                <span class='title'>Post-Doctoral Researcher</span>
-                <span class='affiliation'>Northwestern University</span>
+                <span class='title'>Assistant Professor</span>
+                <span class='affiliation'>Department of Sociology</span>
+                <span class='affiliation'>Indiana University</span>
             </div>
             <div class='navbar'>
                 <a class='navtag' href='default.html'>Home</a>
@@ -44,6 +53,10 @@
             <span class='rightcontent'>I am a Post-Doctoral Researcher in the SONIC Research Group at Northwestern University. I received my Ph.D. in Sociology from the University of California, Berkeley in August 2016.</span>
         </div>
     </div>   
-
+    <div id='foot' class='footer'>          
+        <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'>
+        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo' style='padding-top:25px; padding-bottom:25px;'></a>
+        </a>
+    </div>
 </body>
 </html>
