--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,16 @@
 
 <!DOCTYPE html>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-104349919-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L49EKS4DGH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-L49EKS4DGH');
+</script>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'/>
 <link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 800px)" href="small-device.css" />
@@ -22,8 +20,8 @@
              
 <meta charset="utf-8"/>
 <title>Michael Schultz</title>
-<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Northwestern, SONIC, Berkeley/>
-<meta name="description" content="Michael Schultz is a Post-Doctoral Researcher at Northwestern University."/>
+<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Computational, Indiana, Northwestern, SONIC, Berkeley/>
+<meta name="description" content="Michael Schultz is a Assistant Professor at Indiana University."/>
 
 </head>
 <body>
@@ -31,28 +29,29 @@
         <div id='header' class='banner'>
             <div class='headline'>
                 <span class='name'>Michael Schultz</span>
-                <span class='title'>Post-Doctoral Researcher</span>
-                <span class='affiliation'>Northwestern University</span>
+                <span class='title'>Assistant Professor</span>
+                <span class='affiliation'>Department of Sociology</span>
+                <span class='affiliation'>Indiana University</span>
             </div>
             <div class='navbar'>
                 <a class='navtag' href='index.html'>Home</a>
                 <a class='navtag' href='cv.html'>CV</a>
                 <a class='navtag' href='research.html'>Research</a>
                 <a class='navtag' href='teaching.html'>Teaching</a>
+                <a class='navtag' href='https://github.com/schultzmichael'>Code</a>
                 <a class='navtag' href='contact.html'>Contact</a>
             </div>
         </div>
         <div id='body' class='content'>
             <div class='leftcontent'><span class='subheading'>Email</span></div>
             <span class='rightcontent'>                
-                michael.schultz [at] northwestern.edu</span>
+               schumi [at] iu.edu</span>
                 <br><br>
             <div class='leftcontent'><span class='subheading'>Mailing Address</span></div>
             <span class='rightcontent'>                            
-                Northwestern University<br>
-                Frances Searle Building 1.459<br>
-                2240 Campus Drive <br>
-                Evanston, IL 60208<br>
+                755 Ballantine Hall<br>
+                1020 E Kirkwood Ave<br>
+                Bloomington, IN 47405<br>
                 <br>                
             </span>
 
@@ -60,7 +59,7 @@
     </div>   
   <div id='foot' class='footer'>        
         <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'>
-        <a href='http://www.northwestern.edu'><img src='assets/img/northwestern_horizontal_purple.jpg' class='logo' style='padding-top:15px; padding-bottom:15px;'></a>
+        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo' style='padding-top:25px; padding-bottom:25px;'></a>
         </a>
     </div>
     
