--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 
 <!DOCTYPE html>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-104349919-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L49EKS4DGH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-L49EKS4DGH');
+</script>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'/>
 <link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 800px)" href="small-device.css" />
@@ -23,40 +22,41 @@
              
 <meta charset="utf-8"/>
 <title>Michael Schultz</title>
-<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Northwestern, SONIC, Berkeley/>
-<meta name="description" content="Michael Schultz is a Post-Doctoral Researcher at Northwestern University."/>
-
+<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Computational, Indiana, Northwestern, SONIC, Berkeley/>
+<meta name="description" content="Michael Schultz is a Assistant Professor at Indiana University."/>
 </head>
 <body>
     <div id='main' class='main'>
         <div id='header' class='banner'>
             <div class='headline'>
                 <span class='name'>Michael Schultz</span>
-                <span class='title'>Post-Doctoral Researcher</span>
-                <span class='affiliation'>Northwestern University</span>
+                <span class='title'>Assistant Professor</span>
+                <span class='affiliation'>Department of Sociology</span>
+                <span class='affiliation'>Indiana University</span>
             </div>
             <div class='navbar'>
                 <a class='navtag' href='index.html'>Home</a>
                 <a class='navtag' href='cv.html'>CV</a>
                 <a class='navtag' href='research.html'>Research</a>
                 <a class='navtag' href='teaching.html'>Teaching</a>
+                <a class='navtag' href='https://github.com/schultzmichael'>Code</a>
                 <a class='navtag' href='contact.html'>Contact</a>
             </div>
         </div>
         <div id='body' class='content'>
             <div class='leftcontent'><img src='assets/img/schultz.jpg' class='portrait'></div>
             <div class='rightcontent'>
-                <span class='paragraph'>I am a Post-Doctoral Researcher at Northwestern University in the <b>Science of Networks in Communities</b> (SONIC) research group. I received my Ph.D. in Sociology from the <b>University of California, Berkeley</b> in August 2016.</span>
-                <span class='paragraph'>I work at the intersection of economic sociology, social psychology, and computational social science. My research examines the <b>structure of social interactions and social relations</b>. It seeks to understand (1) how social interactions are conditioned by their context and (2) how patterns of social action combine to create macrosocial structure.</span>
-                <span class='paragraph'>My research has explored the dynamics of interactions within organizations, including the <b>Federal Reserve</b> and <b>NASA</b>, and analyzed the diverse structures created by <b>confidant relationships, diplomatic missions, and lifestyle preferences</b>.
+                <span class='paragraph'>I am an Assistant Professory of Sociology at <b>Indiana University Bloomington</b>. Previously, I was a Post-Doctoral Researcher at Northwestern University in the <b>Science of Networks in Communities</b> (SONIC) research group. I received my Ph.D. in Sociology from the <b>University of California, Berkeley</b> in August 2016.</span>
+                <span class='paragraph'>I work at the intersection of computational social science, economic sociology and social psychology. My research examines the <b>structure of social interactions and social relations</b>. It seeks to understand (1) how social interactions are conditioned by their context and (2) how patterns of social action combine to create macrosocial structure.</span>
+                <span class='paragraph'>My research has explored the dynamics of interactions within organizations, including the <b>Federal Reserve</b> and <b>NASA</b>, and analyzed the diverse structures created by <b>confidant relationships, international diplomatic missions, and lifestyle preferences</b>.
                 </span>
-                <span class='paragraph'>I am a supporter of a mixed methods approaches. My research primarily uses computational methods (e.g. <b>nonparametric statistics</b>, <b>network analysis</b>, <b>text analysis</b>, and <b>information theory</b>), but I also happily employ qualitative research methods when appropriate.</span>
+                <span class='paragraph'>I like mixed methods approaches to research. I primarily use computational methods (e.g. <b>nonparametric statistics</b>, <b>network analysis</b>, <b>text analysis</b>, and <b>information theory</b>), but I also happily employ qualitative methods when the research calls for it.</span>
             </div>
         </div>
     </div>
-    <div id='foot' class='footer'>        
+    <div id='foot' class='footer'>          
         <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'>
-        <a href='http://www.northwestern.edu'><img src='assets/img/northwestern_horizontal_purple.jpg' class='logo' style='padding-top:15px; padding-bottom:15px;'></a>
+        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo' style='padding-top:25px; padding-bottom:25px;'></a>
         </a>
     </div>
     
