--- a/teaching.html
+++ b/teaching.html
@@ -1,18 +1,16 @@
 
 <!DOCTYPE html>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-104349919-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
 <html>
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L49EKS4DGH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-L49EKS4DGH');
+</script>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'/>
 <link rel="stylesheet" type="text/css" href="default.css" />
 <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 800px)" href="small-device.css" />
@@ -22,23 +20,24 @@
              
 <meta charset="utf-8"/>
 <title>Michael Schultz</title>
-<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Northwestern, SONIC, Berkeley/>
-<meta name="description" content="Michael Schultz is a Post-Doctoral Researcher at Northwestern University."/>
-
+<meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Computational, Indiana, Northwestern, SONIC, Berkeley/>
+<meta name="description" content="Michael Schultz is a Assistant Professor at Indiana University."/>
 </head>
 <body>
     <div id='main' class='main'>
         <div id='header' class='banner'>
             <div class='headline'>
                 <span class='name'>Michael Schultz</span>
-                <span class='title'>Post-Doctoral Researcher</span>
-                <span class='affiliation'>Northwestern University</span>
+                <span class='title'>Assistant Professor</span>
+                <span class='affiliation'>Department of Sociology</span>
+                <span class='affiliation'>Indiana University</span>
             </div>
             <div class='navbar'>
                 <a class='navtag' href='index.html'>Home</a>
                 <a class='navtag' href='cv.html'>CV</a>
                 <a class='navtag' href='research.html'>Research</a>
                 <a class='navtag' href='teaching.html'>Teaching</a>
+                <a class='navtag' href='https://github.com/schultzmichael'>Code</a>
                 <a class='navtag' href='contact.html'>Contact</a>
             </div>
         </div>
@@ -46,10 +45,10 @@
             <div class='leftcontent'></div>
             <span class='rightcontent'>
               <span class='paragraph'>
-                I have taught courses on economic sociology, introductory sociological methods, and introductory quantitative social science. I have over six years of experience in consulting on statistical analysis and research design for graduate students and faculty.
+                I teach courses in statistical and computational methods at both the graduate and undergraduate levels. I also teach a seminar in economic sociology for undergraduates. In the past, I've taught a course in data science for beginners and workshops in R and python. I also have over six years of experience in consulting on statistical analysis and research design for graduate students and faculty. 
               </span>
               <span class='paragraph'>
-                I am prepared to teach courses in cultural and economic sociology, quantitative methods at all levels (including text analysis and social network analysis), and other topics related to my research (including conceptions of social structure and logic of inquiry). 
+                I am prepared to teach courses in organizations, the logic of inquiry, and specific computational methods at all levels (including text analysis and social network analysis) and special topics related to my research (Banking and Society, Organizations and Failure, Conversation)
               </span>
               <span class='paragraph'>                
                 I also have an M.Ed. in Secondary Education from George Washington University and three years of experience in teaching high school mathematics and computing courses.
@@ -57,9 +56,10 @@
             </span>
         </div>
     </div>   
-  <div id='foot' class='footer'>        
+    </div>   
+    <div id='foot' class='footer'>          
         <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'>
-        <a href='http://www.northwestern.edu'><img src='assets/img/northwestern_horizontal_purple.jpg' class='logo' style='padding-top:15px; padding-bottom:15px;'></a>
+        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo' style='padding-top:25px; padding-bottom:25px;'></a>
         </a>
     </div>
     
