--- a/teaching.html
+++ b/teaching.html
@@ -57,10 +57,9 @@
         </div>
     </div>   
     </div>   
-    <div id='foot' class='footer'>          
-        <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'>
-        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo' style='padding-top:25px; padding-bottom:25px;'></a>
-        </a>
+    <div id='foot' class='footer'>        
+        <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'></a>
+        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo smalllogo'></a>
     </div>
     
     
