--- a/default.html
+++ b/default.html
@@ -44,7 +44,7 @@
                 <a class='navtag' href='cv.html'>CV</a>
                 <a class='navtag' href='research.html'>Research</a>
                 <a class='navtag' href='teaching.html'>Teaching</a>
-                <a class='navtag' href='https://github.com/schultzmichael'>GitHub</a>
+                <a class='navtag' href='https://github.com/schultzmichael'>Code</a>
                 <a class='navtag' href='contact.html'>Contact</a>
             </div>
         </div>
@@ -54,10 +54,10 @@
             <span class='rightcontent'>I am an Assistant Professor in Sociology at Indiana University Bloomington. Previously, I was a Post-Doctoral Researcher in the SONIC Research Group at Northwestern University. I received my Ph.D. in Sociology from the University of California, Berkeley in August 2016.</span>
         </div>
     </div>
-    <div id='foot' class='footer'>          
-        <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'>
-        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo' style='padding-top:25px; padding-bottom:25px;'></a>
-        </a>
+    <div id='foot' class='footer'>        
+        <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'></a>
+        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo smalllogo'></a>
+    </div>
     </div>
 </body>
 </html>
