--- a/cv.html
+++ b/cv.html
@@ -47,10 +47,9 @@
             <span class='rightcontent'><span class='entry'>My most up-to-date CV can be found <a href='docs/Schultz_CV_9_21.pdf'>here</a>.</span></span>
         </div>
     </div> 
-    <div id='foot' class='footer'>         
-        <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'>
-        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo' style='padding-top:25px; padding-bottom:25px;'></a>
-        </a>
+<div id='foot' class='footer'>        
+        <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'></a>
+        <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo smalllogo'></a>
     </div>
     
 </body>
