Revert "Redesign with Hugo"
This reverts commit 46b316e64e9c2d67c310c2af6a824c2d819173a8.

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,6 +22,7 @@
 <title>Michael Schultz</title>
 <meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Computational, Indiana, Northwestern, SONIC, Berkeley/>
 <meta name="description" content="Michael Schultz is a Assistant Professor at Indiana University."/>
+
 </head>
 <body>
     <div id='main' class='main'>
@@ -43,17 +43,21 @@
             </div>
         </div>
         <div id='body' class='content'>
-            <div class='leftcontent'><img src='assets/img/schultz.jpg' class='portrait'></div>
-            <div class='rightcontent'>
-                <span class='paragraph'>I am an Assistant Professory of Sociology at <b>Indiana University Bloomington</b>. Previously, I was a Post-Doctoral Researcher at Northwestern University in the <b>Science of Networks in Communities</b> (SONIC) research group. I received my Ph.D. in Sociology from the <b>University of California, Berkeley</b> in August 2016.</span>
-                <span class='paragraph'>I work at the intersection of computational social science, economic sociology and social psychology. My research examines the <b>structure of social interactions and social relations</b>. It seeks to understand (1) how social interactions are conditioned by their context and (2) how patterns of social action combine to create macrosocial structure.</span>
-                <span class='paragraph'>My research has explored the dynamics of interactions within organizations, including the <b>Federal Reserve</b> and <b>NASA</b>, and analyzed the diverse structures created by <b>confidant relationships, international diplomatic missions, and lifestyle preferences</b>.
-                </span>
-                <span class='paragraph'>I like mixed methods approaches to research. I primarily use computational methods (e.g. <b>nonparametric statistics</b>, <b>network analysis</b>, <b>text analysis</b>, and <b>information theory</b>), but I also happily employ qualitative methods when the research calls for it.</span>
-            </div>
+            <div class='leftcontent'><span class='subheading'>Email</span></div>
+            <span class='rightcontent'>                
+               schumi [at] iu.edu</span>
+                <br><br>
+            <div class='leftcontent'><span class='subheading'>Mailing Address</span></div>
+            <span class='rightcontent'>                            
+                755 Ballantine Hall<br>
+                1020 E Kirkwood Ave<br>
+                Bloomington, IN 47405<br>
+                <br>                
+            </span>
+
         </div>
-    </div>
-    <div id='foot' class='footer'>        
+    </div>   
+  <div id='foot' class='footer'>        
         <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'></a>
         <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo smalllogo'></a>
     </div>
