--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,12 +22,13 @@
 <title>Michael Schultz</title>
 <meta name="keywords" content="Sociology, Michael Schultz, Mike Schultz, Computational, Indiana, Northwestern, SONIC, Berkeley/>
 <meta name="description" content="Michael Schultz is a Assistant Professor at Indiana University."/>
+
 </head>
 <body>
     <div id='main' class='main'>
         <div id='header' class='banner'>
             <div class='headline'>
-                <span class='name'>Michael Schultz</span>
+<span class='name'>Michael Schultz</span>
                 <span class='title'>Assistant Professor</span>
                 <span class='affiliation'>Department of Sociology</span>
                 <span class='affiliation'>Indiana University</span>
@@ -43,21 +43,14 @@
             </div>
         </div>
         <div id='body' class='content'>
-            <div class='leftcontent'><img src='assets/img/schultz.jpg' class='portrait'></div>
-            <div class='rightcontent'>
-                <span class='paragraph'>I am an Assistant Professory of Sociology at <b>Indiana University Bloomington</b>. Previously, I was a Post-Doctoral Researcher at Northwestern University in the <b>Science of Networks in Communities</b> (SONIC) research group. I received my Ph.D. in Sociology from the <b>University of California, Berkeley</b> in August 2016.</span>
-                <span class='paragraph'>I work at the intersection of computational social science, economic sociology and social psychology. My research examines the <b>structure of social interactions and social relations</b>. It seeks to understand (1) how social interactions are conditioned by their context and (2) how patterns of social action combine to create macrosocial structure.</span>
-                <span class='paragraph'>My research has explored the dynamics of interactions within organizations, including the <b>Federal Reserve</b> and <b>NASA</b>, and analyzed the diverse structures created by <b>confidant relationships, international diplomatic missions, and lifestyle preferences</b>.
-                </span>
-                <span class='paragraph'>I like mixed methods approaches to research. I primarily use computational methods (e.g. <b>nonparametric statistics</b>, <b>network analysis</b>, <b>text analysis</b>, and <b>information theory</b>), but I also happily employ qualitative methods when the research calls for it.</span>
-            </div>
+            <div class='leftcontent'></div>
+            <span class='rightcontent'><span class='entry'>My most up-to-date CV can be found <a href='docs/Schultz_CV_9_21.pdf'>here</a>.</span></span>
         </div>
-    </div>
-    <div id='foot' class='footer'>        
+    </div> 
+<div id='foot' class='footer'>        
         <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'></a>
         <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo smalllogo'></a>
     </div>
-    
     
 </body>
 </html>
