--- a/teaching.html
+++ b/teaching.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -43,16 +42,21 @@
             </div>
         </div>
         <div id='body' class='content'>
-            <div class='leftcontent'><img src='assets/img/schultz.jpg' class='portrait'></div>
-            <div class='rightcontent'>
-                <span class='paragraph'>I am an Assistant Professory of Sociology at <b>Indiana University Bloomington</b>. Previously, I was a Post-Doctoral Researcher at Northwestern University in the <b>Science of Networks in Communities</b> (SONIC) research group. I received my Ph.D. in Sociology from the <b>University of California, Berkeley</b> in August 2016.</span>
-                <span class='paragraph'>I work at the intersection of computational social science, economic sociology and social psychology. My research examines the <b>structure of social interactions and social relations</b>. It seeks to understand (1) how social interactions are conditioned by their context and (2) how patterns of social action combine to create macrosocial structure.</span>
-                <span class='paragraph'>My research has explored the dynamics of interactions within organizations, including the <b>Federal Reserve</b> and <b>NASA</b>, and analyzed the diverse structures created by <b>confidant relationships, international diplomatic missions, and lifestyle preferences</b>.
-                </span>
-                <span class='paragraph'>I like mixed methods approaches to research. I primarily use computational methods (e.g. <b>nonparametric statistics</b>, <b>network analysis</b>, <b>text analysis</b>, and <b>information theory</b>), but I also happily employ qualitative methods when the research calls for it.</span>
-            </div>
+            <div class='leftcontent'></div>
+            <span class='rightcontent'>
+              <span class='paragraph'>
+                I teach courses in statistical and computational methods at both the graduate and undergraduate levels. I also teach a seminar in economic sociology for undergraduates. In the past, I've taught a course in data science for beginners and workshops in R and python. I also have over six years of experience in consulting on statistical analysis and research design for graduate students and faculty. 
+              </span>
+              <span class='paragraph'>
+                I am prepared to teach courses in organizations, the logic of inquiry, and specific computational methods at all levels (including text analysis and social network analysis) and special topics related to my research (Banking and Society, Organizations and Failure, Conversation)
+              </span>
+              <span class='paragraph'>                
+                I also have an M.Ed. in Secondary Education from George Washington University and three years of experience in teaching high school mathematics and computing courses.
+              </span>
+            </span>
         </div>
-    </div>
+    </div>   
+    </div>   
     <div id='foot' class='footer'>        
         <a href='http://sonic.northwestern.edu'><img src='assets/img/sonic_logo.png' class='logo'></a>
         <a href='http://www.indiana.edu'><img src='assets/img/IUB.H.2line_WEB.png' class='logo smalllogo'></a>
