--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <div class="avatar mb-5">
         <img class="rounded-circle" src="img/profile.png" alt="Responsive image">
       </div>
-      <p>I&rsquo;m an assistant professor of sociology at Indiana University Bloomington.</p>
+      <h1 id="michael-schultz">Michael Schultz</h1>
+<p><!-- raw HTML omitted --><!-- raw HTML omitted --><!-- raw HTML omitted --></p>
+<p>I&rsquo;m an assistant professor of sociology at Indiana University Bloomington.</p>
 <p>Previously, I was a post-doctoral researcher at <strong>Northwestern University</strong> in the <strong>Science of Networks in Communities</strong> (SONIC) research group. I received my Ph.D. in Sociology from the <strong>University of California, Berkeley</strong> in August 2016.</p>
 <p>I&rsquo;m a computational social scientist who studies organizations, communication, and quantitative methodologies. I&rsquo;m particularly interested in how the structure of communication affects organizational and economic outcomes.</p>
 <p>My research has looked at the the effects of communication structures within and across organizations, including the <strong>Federal Reserve</strong>, <strong>NASA</strong>, and <strong>international diplomacy</strong>. My methodological research seeks to harmonize theoretical and statistical considerations in quantitative research, particularly with respect to model selection and abductive research designs.</p>
