--- a/about/index.html
+++ b/about/index.html
@@ -143,13 +143,12 @@
       </h1>
     </header>
 
-    <p>I&rsquo;m a computational social scientist, currently serving as an assistant professor of sociology at Indiana University Bloomington.</p>
-<p>Previously, I was a post-doctoral researcher at <strong>Northwestern University</strong> in the <a href="https://sonic.northwestern.edu/"  class="external-link" target="_blank" rel="noopener"><strong>Science of Networks in Communities</strong> (SONIC)</a> research group. I received my Ph.D. in Sociology from the <strong>University of California, Berkeley</strong> in August 2016. I also have degrees in Computer Engineering from <strong>Carnegie Mellon University</strong> and Secondary Education from <strong>George Washington University</strong>.</p>
-<p>I study organizations, communication, and quantitative methodologies. I&rsquo;m particularly interested in how the structure of communication affects organizational and economic outcomes.</p>
-<p>My research has looked at the the effects of communication structures within and across organizations, including the <strong>Federal Reserve</strong>, <strong>NASA</strong>, and <strong>international diplomacy</strong>. My methodological research seeks to harmonize theoretical and statistical considerations in quantitative research, particularly with respect to model selection and abductive research designs.</p>
+    <p>Hello! I&rsquo;m a computational social scientist, currently serving as an <strong>Assistant Professor of Sociology at Indiana University Bloomington.</strong> This semester, I am on leave and am living in London.</p>
+<p>Previously, I was a post-doctoral researcher at <strong>Northwestern University</strong> in the <a href="https://sonic.northwestern.edu/"  class="external-link" target="_blank" rel="noopener"><strong>Science of Networks in Communities</strong> (SONIC)</a> research group working under Noshir Contractor. I received my Ph.D. in Sociology from the <strong>University of California, Berkeley</strong>. I also have degrees in Computer Engineering from <strong>Carnegie Mellon University</strong> and Secondary Education from <strong>George Washington University</strong>.</p>
+<p>I study quantitative/computational methods and organizations. My methodological research seeks to harmonize theoretical and statistical considerations in quantitative research, particularly with respect to <strong>computational methods</strong>, <strong>model selection</strong>, and <strong>abductive research</strong> designs. My substantive work looks how different structures of communication within organizations lead to different economic and policy outcomes.  My research has looked at the the effects of communication structures within and across organizations, including the <strong>Federal Reserve</strong>, <strong>NASA</strong>, and <strong>international diplomacy</strong>.</p>
 <p>See more on my <a href="/research" >research</a>, check out my code on <a href="https://github.com/schultzmichael"  class="external-link" target="_blank" rel="noopener">github</a>, or see my <a href="/cv/" >cv</a>.</p>
 <!-- raw HTML omitted -->
-<p><em>Not the sociologist named Michael Schultz you were looking for? Try this <a href="https://michael-a-schultz.com/"  class="external-link" target="_blank" rel="noopener">one</a>.</em></p>
+<p><em>Not the US sociologist named Michael Schultz you were looking for? Try this <a href="https://michael-a-schultz.com/"  class="external-link" target="_blank" rel="noopener">one</a>.</em></p>
 
   </article>
 </section>
