--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="Michael Schultz">
 <meta name="description" content="Michael Schultz">
-<meta name="keywords" content="blog,developer,personal">
+<meta name="keywords" content="sociologist,computational,personal">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Michael Schultz"/>
@@ -168,7 +168,7 @@
   
     
       <li>
-        <a href="www.linkedin.com/in/michael-schultz-7439b6192" aria-label="LinkedIn"   >
+        <a href="https://www.linkedin.com/in/michael--schultz" aria-label="LinkedIn"   >
           <i class="fa fa-2x fa-linkedin" aria-hidden="true"></i>
         </a>
       </li>
