--- a/research/index.html
+++ b/research/index.html
@@ -15,7 +15,7 @@
 <meta name="author" content="Michael Schultz">
 <meta name="description" content="Bridging the Gap Between Theory and Data Link to heading A core assumption of quantitative empirical research is that models reflect the theories being tested. However, the research methods available are often an imperfect fit to theoretical concepts. My research works to reduce this difference by finding new ways to approach the relationship between concepts and quantities (1-6). This work asks two questions:
 How do we move from semantic understandings to models and representations?">
-<meta name="keywords" content="blog,developer,personal">
+<meta name="keywords" content="sociologist,computational,personal">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Research"/>
@@ -146,13 +146,13 @@ How do we move from semantic understandings to models and representations?" />
       </h1>
     </header>
 
-    <h2 id="bridging-the-gap-between-theory-and-data">
+    <h1 id="bridging-the-gap-between-theory-and-data">
   Bridging the Gap Between Theory and Data
   <a class="heading-link" href="#bridging-the-gap-between-theory-and-data">
     <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
     <span class="sr-only">Link to heading</span>
   </a>
-</h2>
+</h1>
 <p>A core assumption of quantitative empirical research is that models reflect the theories being tested. However, the research methods available are often an imperfect fit to theoretical concepts. My research works to reduce this difference by finding new ways to approach the relationship between concepts and quantities (<em>1-6</em>). This work asks two questions:</p>
 <ul>
 <li>How do we move from <strong>semantic understandings to models and representations</strong>? (<em>2,5,6</em>)</li>
@@ -191,13 +191,13 @@ How do we move from semantic understandings to models and representations?" />
 <li>Schultz, Michael. &ldquo;The Reasonable Ineffectiveness of Mathematics in Sociology&rdquo;.</li>
 <li>Schultz, Michael. &ldquo;The Case for Standardized ML Models in Social Research&rdquo;.</li>
 </ol>
-<h2 id="consequences-of-communication-structures">
+<h1 id="consequences-of-communication-structures">
   Consequences of Communication Structures
   <a class="heading-link" href="#consequences-of-communication-structures">
     <i class="fa fa-link" aria-hidden="true" title="Link to heading"></i>
     <span class="sr-only">Link to heading</span>
   </a>
-</h2>
+</h1>
 <p>Social interaction and conversation are a fundamental component of social structure. Despite this, we still know little about how interactions change in the presence of new members, when aggregated or combined into networks, or in different contexts.</p>
 <p>My work on the effects of communications structures uses <strong>natural language processing</strong>, <strong>information theory</strong>, and <strong>social networks</strong> to investigate the relationships between interactions and social structures in conversations, discussions, and other forms of organizational communications. I also develop <strong>novel methods to help measure new conversational features</strong> (<em>9,10,13</em>)</p>
 <p>This research demonstrates how communication structures and contexts can alternately <strong>promote cooperation</strong> (<em>12</em>) or <strong>stifle the exchange of ideas</strong> (<em>7,9,11</em>) and <strong>increase power imbalances</strong> (<em>8,10</em>).</p>
