--- a/students/index.html
+++ b/students/index.html
@@ -17,7 +17,7 @@
 Office Hours Link to heading My office hours this semester are by appointment only.
 I&rsquo;m on London time, so appointments will be somewhat early for East Coasters. Email me to make an appointment.
 Recommendation Letter Policy Link to heading I am happy to write letters of recommendation for students who meet the following criteria:">
-<meta name="keywords" content="blog,developer,personal">
+<meta name="keywords" content="sociologist,computational,personal">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Students"/>
