--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 
 <meta name="author" content="Michael Schultz">
 <meta name="description" content="Nothing to see here&hellip; Move along!">
-<meta name="keywords" content="blog,developer,personal">
+<meta name="keywords" content="sociologist,computational,personal">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Projects"/>
